format, add basis for functional tests

--- a/src/samtalk/CMakeLists.txt
+++ b/src/samtalk/CMakeLists.txt
@@ -1,6 +1,18 @@
 set(SOURCE_FILES
     main.c)
 
-add_definitions(-DUSESDL)
+find_package(SDL)
+
+if (SDL_FOUND)
+    add_definitions(-DUSESDL)
+    add_definitions(-D_SDL_main_h)
+endif()
+
 add_executable(samtalk ${SOURCE_FILES})
-target_link_libraries(samtalk PUBLIC samlib SDL)
+
+if (SDL_FOUND)
+    include_directories(${SDL_INCLUDE_DIR})
+    target_link_libraries(samtalk samlib ${SDL_LIBRARY})
+else()
+    target_link_libraries(samtalk samlib)
+endif()
