--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
+# add test directory as define
+add_definitions("-DSAM_TEST_DIR=\"${CMAKE_CURRENT_LIST_DIR}\"")
+
 add_subdirectory(test_common)
 add_subdirectory(test_hello)
 add_subdirectory(test_phonemes)
