large table refactor and cleanup

--- a/src/tests/test_phonemes/CMakeLists.txt
+++ b/src/tests/test_phonemes/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(SOURCE_FILES
     test_phonemes.c)
 
-add_executable(test_phonemes ${SOURCE_FILES})
-target_link_libraries(test_phonemes samlib test_common)
+add_executable(test_reciter ${SOURCE_FILES})
+target_link_libraries(test_reciter samlib test_common)
