Hacked some shitty SDL3 support
Likely doesn't even work correctly.

--- a/src/samtalk/CMakeLists.txt
+++ b/src/samtalk/CMakeLists.txt
@@ -1,18 +1,20 @@
 set(SOURCE_FILES
     main.c)
 
-find_package(SDL)
+#find_package(SDL)
+find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-static)
 
-if (SDL_FOUND)
+if (SDL3_FOUND)
     add_definitions(-DUSESDL)
     add_definitions(-D_SDL_main_h)
+else()
+    message( FATAL_ERROR "Yeah, you want SDL for this." )
 endif()
 
 add_executable(samtalk ${SOURCE_FILES})
 
-if (SDL_FOUND)
-    include_directories(${SDL_INCLUDE_DIR})
-    target_link_libraries(samtalk samlib ${SDL_LIBRARY})
+if (SDL3_FOUND)
+    target_link_libraries(samtalk samlib SDL3::SDL3-static)
 else()
     target_link_libraries(samtalk samlib)
 endif()
